# graphics-research-agent

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CURRENT_STATUS.md  Dockerfile  GRAPHICS_RESEARCH_AGENT_SPEC_WINDOWS_DOCKER.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py  scheduler.py
app/llm/: __init__.py  deepseek_client.py  prompts.py  schemas.py
app/pipeline/: __init__.py  classify.py  dedupe.py  normalize.py  rule_filter.py  run_pipeline.py  summarize.py
app/publishers/: __init__.py  telegram.py
app/sources/: __init__.py  advances_source.py  arxiv_source.py  feed_source.py  gdc_vault_source.py  http_client.py  models.py  source_factory.py
app/storage/: db.py  models.py
app/utils/: hashing.py  markdown_escape.py  time.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  PROMPTS.md  SCORING.md  TROUBLESHOOTING.md
tests/: conftest.py  test_advances_source.py  test_arxiv_source.py  test_catalog_config.py  test_dedupe.py  test_deepseek_schema.py  test_feed_source.py  test_gdc_vault_source.py  test_http_client.py  test_logging_config.py  test_pipeline_dry_run.py  test_rule_filter.py  test_source_factory.py  test_storage_migration.py  test_telegram_publisher.py
tests/fixtures/: advances_2026.html  arxiv_sample.xml  deepseek_classification_response.json  directx_feed.xml  gdc_feed.xml  gdc_vault_catalog.html  gdc_vault_detail.html  gpuopen_feed.xml  news_feed_sample.xml  siggraph_realtime_feed.xml  siggraph_research_feed.xml  telegram_send_response.json  (+1 more)
