[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphics-research-agent"
version = "0.1.0"
description = "Graphics research and rendering news tracker with DeepSeek and Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.30",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
    "ruff>=0.4.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--basetemp=.pytest_tmp", "-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
packages = ["app"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
